# RSW-on-the-Sphere

./: .gitignore  README.md  README_dispersion.md  README_hough_modes.md  configs.yaml  main.py  pyproject.toml  requirements.txt  run_diagnostics.py  run_dynamics.py
Eigenvalues_and_eigenvectors/: Eigenvector_0.py  Eigenvectors.py  Matrix_system.py
Four_Waves/: Five_Waves.py  Four_Waves_2.py  Four_Waves_79.py  Four_Waves_pump.py  four2.py  four22.py
Hough_Harmonics/: Normalization.py  Normalization_m0.py  innerproduct.py
Hough_Harmonics/Eigenvalues_and_eigenvectors/: Eigenvector_0.py  Eigenvectors.py  Matrix_m0.py  Matrix_system.py
Periods/: period.py  period_Harris.py  period_both.py
Triads/: Dynamic_Triads.py
docs/: code_guide.md  dispersion_relation.md  hough_modes.md
examples/: README.md  table_2_1_quasi_resonant.yaml  table_2_3_kelvin_rh_energy_flow.yaml
rsw_sphere/dynamics/: dynamic_triads.py  five_waves.py  four_waves_2.py  four_waves_79.py  four_waves_basic.py  four_waves_pump.py  four_waves_rk4_driver.py
rsw_sphere/dynamics/periods/: period.py  period_both.py  period_harris.py
rsw_sphere/hough_harmonics/: inner_product.py  normalization.py
rsw_sphere/hough_harmonics/eigenvalues_and_eigenvectors/: eigenvector_0.py  eigenvectors.py  eigenvectors_m0.py  (+1 more)
rsw_sphere/plotting/: dispersion_relation.py  dispersion_relation_fancy.py  dynamic_three_waves.py  hough_and_derivatives.py  hough_spatial_ev.py
utils/: Dispersion_relation.py  Dispersion_relation_fancy.py  Dynamic_three_waves.py  Hough_and_derivatives.py  Hough_spatial_ev.py
