[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rsw-sphere"
version = "0.1.0"
description = "Nonlinear wave interactions in the rotating shallow water equations on the sphere"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2.0",
    "scipy<1.15",
    "matplotlib",
    "pyyaml",
    "cartopy",
]

[project.scripts]
rsw-dispersion = "rsw_sphere.plotting.dispersion_relation_fancy:main"
rsw-hough-mode = "rsw_sphere.plotting.hough_spatial_ev:main"

[tool.setuptools.packages.find]
include = ["rsw_sphere*"]
